--- a/Desktop/ejercicio-sobreposicion-cajas/css/ejercicio.css
+++ b/Desktop/ejercicio-sobreposicion-cajas/css/ejercicio.css
@@ -4,6 +4,8 @@ main {width: 100vw; height: 100vh; background-color: azure;display: flex;align-i
 
 .caja-madre {position: relative;}
 
+/* Hello */
+
 .caja-1 {
     position:absolute;
     width: 800px;
@@ -13,6 +15,7 @@ main {width: 100vw; height: 100vh; background-color: azure;display: flex;align-i
     border-radius: 5px;
     z-index: 0;
 }
+
 
 .caja-2 {
     position:absolute;
