Versión final del proyecto

--- a/Desktop/layout-pro/css/layout-pro.css
+++ b/Desktop/layout-pro/css/layout-pro.css
@@ -4,6 +4,28 @@ main {width: 100vw; height: 100vh; background-color:salmon;}
 
 .header {width: 100vw; height: 3vh; background-color:royalblue;}
 
+    .nav {
+        width: 80vw;
+        margin-left: 20vw;
+        background-color: royalblue;
+        padding: 5px;
+        list-style: none;
+        text-align: right;
+        position: relative; bottom: 5vh;
+        }
+
+    .nav li {
+        display: inline-block;
+        font-size: 12px;
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        color: white;
+        margin: 10px;
+        padding-left: 30px;
+        padding-right: 20px;
+    }
+
+    .menu-logo {text-align: left; color: white; padding: 8px; padding-left: 12px; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 12px;}
+
 .whiteboard {width: 100vw; height: 94vh; background-color:steelblue ; position: relative; left: 0vw; align-items: center;}
 
     .lateral {width: 15vw; height: 92vh; margin:7px; margin-right: 3.5px; margin-left: 7px; margin-bottom: 7px; background-color:white; display: inline-block;}
@@ -24,18 +46,7 @@ main {width: 100vw; height: 100vh; background-color:salmon;}
 
         .opcion-8 {width: 14.5vw; height: 11vh; background-color: orange; margin: 3.5px;}
 
-    .feed {
-        width: 83vw; 
-        height: 92vh; 
-        margin:7px; 
-        margin-left: 3.5px; 
-        margin-bottom: 7px; 
-        background-color:white; 
-        display: inline-block; 
-        margin: 0 auto;
-        position: relative; 
-        bottom: 46vh;
-    }
+    .feed {width: 83vw; height: 92vh; margin:7px; margin-left: 3.5px; margin-bottom: 7px; background-color:white; display: inline-block; margin: 0 auto; position: relative; bottom: 46vh;}
 
         .elemento-1 {position: relative; left: 16vw; top: 23vh;}
 
